# galtab

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE.rst  README.md  pyproject.toml  requirements.txt  requires.txt  setup.py
.github/workflows/: publish-to-pypi.yml  test_package.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  reference.rst
docs/source/notebooks/: debug_grad_predict.py  intro.ipynb
galtab/: __init__.py  _galaxy_tabulator.py  cdf_interp.py  galaxy_tabulator.py  galtab.py  moments.py
galtab/jax/: __init__.py  cdf_interp.py  galaxy_tabulator.py  galtab.py  halotools_empirical_models.py  moments.py
galtab/jaxhalotools/: __init__.py  empirical_models.py
galtab/obs/: __init__.py  obs.py  test_obs.py
galtab/paper2/: README.md  accuracy_vs_runtime.py  clean_desi_data.py  count_desi_randoms.py  desi_cic.py  desi_observables.py  desi_sv3_pointings.py  importance.py  kuan_mcmc_script.py  param_config.py  param_sampler.py  tabulation_systematics_forecast.py  test_mpi.py
galtab/paper2/plots/: PaperPlots.ipynb
galtab/tests/: test_galtab.py
hodtab/: __init__.py  galaxy_tabulator.py  hodtab.py
hodtab/counts_in_cylinders/: __init__.py
