[project]
name = "galtab"
authors = [
    {name = "Alan Pearl", email = "alanpearl13@gmail.com"}
]
description = "Galaxy tabulation: HOD counts-in-cells statistics with JAX"
version = "1.0"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
home = "https://github.com/AlanPearl/galtab"

[tool.setuptools]
include-package-data = true
packages = {find = {exclude=["tests*", "scripts*", "docs*", "notebooks*"]}}
package-dir = {galtab = "galtab"}

[build-system]
requires = [
    "setuptools>=45",
]
build-backend = "setuptools.build_meta"
