[project]
name = "galtab"
authors = [
    {name = "Alan Pearl", email = "alanpearl13@gmail.com"}
]
description = "Galaxy tabulation: HOD counts-in-cells statistics with JAX"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.rst"}
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
home = "https://github.com/AlanPearl/galtab"

[tool.setuptools_scm]
write_to = "galtab/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = true
packages = {find = {exclude=["tests*", "scripts*", "docs*", "notebooks*"]}}
package-dir = {galtab = "galtab"}

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=7",
    "tomli>1.0.0; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E231", "E241", "E501", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
max-line-length = 88
count = true
